--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "contentful",
+  "name": "17Oranges",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -18,7 +18,8 @@
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.11.2",
     "react-toastify": "^9.1.3",
-    "styled-components": "^5.3.10"
+    "styled-components": "^5.3.10",
+    "vite-plugin-svgr": "^3.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
